--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@ h1{
   color:#fff;
 }
 
-/* Flecha izquierda exterior */
+/* Flecha izquierda exterior (MÁS A LA IZQUIERDA) */
 .portfolio-arrow.left{
-  left:-56px;
+  left:-96px;
 }
 
-/* Flecha izquierda interior (NUEVA) */
+/* Flecha izquierda interior */
 .portfolio-arrow.left-inner{
   left:8px;
   opacity:.6;
@@ -332,11 +332,8 @@ h1{
     <h1>Portfolio</h1>
 
     <div class="portfolio-wrapper">
-      <!-- Flecha izquierda exterior -->
       <button class="portfolio-arrow left" aria-label="Anterior">‹</button>
-      <!-- Flecha izquierda interior (NUEVA) -->
       <button class="portfolio-arrow left-inner" aria-label="Anterior">‹</button>
-      <!-- Flecha derecha -->
       <button class="portfolio-arrow right" aria-label="Siguiente">›</button>
 
       <div class="portfolio-carousel">
