--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@ h1{
   color:#fff;
 }
 
-/* Flecha izquierda exterior (MÁS A LA IZQUIERDA) */
+/* Flecha izquierda exterior */
 .portfolio-arrow.left{
   left:-96px;
 }
 
-/* Flecha izquierda interior */
+/* Flecha izquierda interior (MOVIDA) */
 .portfolio-arrow.left-inner{
-  left:8px;
+  left:-24px;   /* ⬅ ahora SÍ se mueve */
   opacity:.6;
   font-size:40px;
 }
