--- a/index.html
+++ b/index.html
@@ -175,30 +175,20 @@ h1{
   background:none;
   border:none;
   color:#888;
-  font-size:48px;
+  font-size:42px;
   cursor:pointer;
   z-index:30;
-  transition:color .2s ease, opacity .2s ease;
+  transition:color .2s ease;
 }
 
 .portfolio-arrow:hover{
   color:#fff;
 }
 
-/* Flecha izquierda exterior */
+/* Flecha izquierda (AL BORDE DEL CARRUSEL) */
 .portfolio-arrow.left{
-  left:-96px;
-}
-
-/* Flecha izquierda interior (MOVIDA) */
-.portfolio-arrow.left-inner{
-  left:-24px;   /* ⬅ ahora SÍ se mueve */
-  opacity:.6;
-  font-size:40px;
-}
-
-.portfolio-arrow.left-inner:hover{
-  opacity:1;
+  left:0;
+  transform:translate(-50%,-50%);
 }
 
 /* Flecha derecha */
@@ -333,7 +323,6 @@ h1{
 
     <div class="portfolio-wrapper">
       <button class="portfolio-arrow left" aria-label="Anterior">‹</button>
-      <button class="portfolio-arrow left-inner" aria-label="Anterior">‹</button>
       <button class="portfolio-arrow right" aria-label="Siguiente">›</button>
 
       <div class="portfolio-carousel">
@@ -379,10 +368,8 @@ document.querySelectorAll("nav span").forEach((btn,i)=>{
 
 const carousel=document.querySelector(".portfolio-carousel");
 
-document.querySelectorAll(".portfolio-arrow.left, .portfolio-arrow.left-inner")
-  .forEach(btn=>{
-    btn.onclick=()=>carousel.scrollBy({left:-480,behavior:"smooth"});
-  });
+document.querySelector(".portfolio-arrow.left").onclick=
+  ()=>carousel.scrollBy({left:-480,behavior:"smooth"});
 
 document.querySelector(".portfolio-arrow.right").onclick=
   ()=>carousel.scrollBy({left:480,behavior:"smooth"});
