--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ h1{
   color:#888;
   font-size:42px;
   cursor:pointer;
-  z-index:100;              /* ⬅ AHORA POR ENCIMA DE TODO */
+  z-index:999; /* ⬅ FORZADO POR ENCIMA DE TODO */
   transition:color .2s ease;
 }
 
