--- a/index.html
+++ b/index.html
@@ -132,11 +132,10 @@ h1{
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
-  overflow:hidden;
   padding-right:120px;
 }
 
-/* Gradiente derecho */
+/* Gradiente derecho (hint de scroll) */
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
@@ -145,7 +144,6 @@ h1{
   width:120px;
   height:100%;
   pointer-events:none;
-  z-index:1;
   background:linear-gradient(
     to right,
     rgba(10,10,10,0),
@@ -153,7 +151,7 @@ h1{
   );
 }
 
-/* Carrusel */
+/* Carrusel SIN flechas */
 .portfolio-carousel{
   display:flex;
   gap:48px;
@@ -161,40 +159,12 @@ h1{
   padding-bottom:20px;
   scroll-behavior:smooth;
   margin-left:-12px;
+
   scrollbar-width:none;
 }
 
 .portfolio-carousel::-webkit-scrollbar{
   display:none;
-}
-
-/* ========= FLECHAS ========= */
-.portfolio-arrow{
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
-  background:none;
-  border:none;
-  color:#888;
-  font-size:42px;
-  cursor:pointer;
-  z-index:999; /* ⬅ FORZADO POR ENCIMA DE TODO */
-  transition:color .2s ease;
-}
-
-.portfolio-arrow:hover{
-  color:#fff;
-}
-
-/* Flecha izquierda */
-.portfolio-arrow.left{
-  left:0;
-  transform:translate(-50%,-50%);
-}
-
-/* Flecha derecha */
-.portfolio-arrow.right{
-  right:32px;
 }
 
 /* ========= PROYECTOS ========= */
@@ -323,27 +293,24 @@ h1{
     <h1>Portfolio</h1>
 
     <div class="portfolio-wrapper">
-      <button class="portfolio-arrow left" aria-label="Anterior">‹</button>
-      <button class="portfolio-arrow right" aria-label="Siguiente">›</button>
-
       <div class="portfolio-carousel">
 
         <a class="project-card" href="#">
-          <div class="project-image"><img src="brazo1.jpg"></div>
+          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
           <h2>NODE</h2>
           <span>Proyecto final de grado</span>
           <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
         </a>
 
         <a class="project-card" href="#">
-          <div class="project-image"><img src="reloj1.jpg"></div>
+          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
           <h2>Sixay · Cómoda</h2>
           <span>Diseño de mobiliario</span>
           <p>Desarrollo completo de una cómoda a medida.</p>
         </a>
 
         <a class="project-card" href="#">
-          <div class="project-image"><img src="secador2.jpg"></div>
+          <div class="project-image"><img src="secador2.jpg" alt=""></div>
           <h2>Exploración material</h2>
           <span>Proyecto experimental</span>
           <p>Investigación formal y constructiva.</p>
@@ -363,23 +330,23 @@ h1{
 
 <script>
 document.querySelectorAll("nav span").forEach((btn,i)=>{
-  btn.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
+  btn.onclick = () =>
+    document.querySelectorAll(".section")[i]
+      .scrollIntoView({behavior:"smooth"});
 });
 
-const carousel=document.querySelector(".portfolio-carousel");
+const cards = document.querySelectorAll(".project-card");
+const carousel = document.querySelector(".portfolio-carousel");
 
-document.querySelector(".portfolio-arrow.left").onclick=
-  ()=>carousel.scrollBy({left:-480,behavior:"smooth"});
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(e=>{
+    if(e.isIntersecting){
+      e.target.classList.add("is-visible");
+    }
+  });
+},{ root: carousel, threshold: 0.3 });
 
-document.querySelector(".portfolio-arrow.right").onclick=
-  ()=>carousel.scrollBy({left:480,behavior:"smooth"});
-
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.isIntersecting&&e.target.classList.add("is-visible"));
-},{root:carousel,threshold:.3});
-
-document.querySelectorAll(".project-card").forEach(c=>observer.observe(c));
+cards.forEach(card=>observer.observe(card));
 </script>
 
 </body>
