--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-
-/* ========= RESET ========= */
+/* RESET */
 *{
   margin:0;
   padding:0;
@@ -17,14 +16,13 @@
   font-family:"Inter",sans-serif;
 }
 
-/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
   overflow-y:scroll;
 }
 
-/* ========= NAV ========= */
+/* NAV */
 nav{
   position:fixed;
   top:0;
@@ -49,22 +47,20 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= SECTIONS ========= */
+/* SECTIONS */
 .section{
   min-height:100vh;
   display:flex;
-  justify-content:flex-start;
   padding:180px 10vw 160px 22vw;
 }
 
-/* ========= SECTION BLOCK ========= */
 .section-block{
   position:sticky;
   top:260px;
   max-width:1100px;
 }
 
-/* ========= HERO ========= */
+/* HERO */
 .section.hero{
   align-items:center;
 }
@@ -72,27 +68,23 @@ nav span{
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
-  margin-left:-4px;
 }
 
 .hero-sub{
   margin-top:24px;
-  padding-left:8px;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
-/* ========= TYPO ========= */
-h1{
-  font-size:clamp(70px,6vw,120px);
-  font-weight:500;
-}
-
-/* ========= ABOUT ========= */
+/* ABOUT */
 .about{
   display:flex;
   margin-top:12px;
+}
+
+.about p{
+  max-width:700px;
 }
 
 .about img{
@@ -101,10 +93,11 @@ h1{
   margin-left:40px;
   object-fit:cover;
   filter:grayscale(100%);
+  opacity:.9;
 }
 
-/* ========= PORTFOLIO ========= */
-.portfolio-container{
+/* PORTFOLIO */
+.portfolio-wrapper{
   position:relative;
   margin-top:32px;
 }
@@ -113,8 +106,8 @@ h1{
 .portfolio-nav{
   position:absolute;
   top:50%;
-  left:-80px;
-  right:-80px;
+  left:-90px;
+  right:-90px;
   display:flex;
   justify-content:space-between;
   pointer-events:none;
@@ -138,6 +131,7 @@ h1{
 .portfolio-carousel{
   overflow-x:auto;
   scroll-behavior:smooth;
+  scrollbar-width:none;
 }
 
 .portfolio-carousel::-webkit-scrollbar{
@@ -151,7 +145,19 @@ h1{
   padding-bottom:20px;
 }
 
-/* ========= PROYECTOS ========= */
+/* Gradiente derecho */
+.portfolio-wrapper::after{
+  content:"";
+  position:absolute;
+  top:0;
+  right:0;
+  width:120px;
+  height:100%;
+  pointer-events:none;
+  background:linear-gradient(to right, rgba(10,10,10,0), #0a0a0a);
+}
+
+/* Proyectos */
 .project-card{
   min-width:460px;
   text-decoration:none;
@@ -178,18 +184,23 @@ h1{
   height:100%;
   object-fit:cover;
   filter:grayscale(100%);
+  transition:filter .4s ease;
 }
 
-/* ========= FOOTER ========= */
+.project-card:hover img{
+  filter:grayscale(0%);
+}
+
+/* FOOTER */
 .footer-wrapper{
   padding:40px 0 20px 22vw;
   font-size:11px;
   letter-spacing:.18em;
   color:#cfcfcf;
 }
-
 </style>
 </head>
+
 <body>
 
 <nav>
@@ -200,7 +211,11 @@ h1{
 
 <section class="section hero">
   <div class="section-block">
-    <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
+    <h1>
+      Luis<br>
+      Blasco-Ibáñez<br>
+      Berbel
+    </h1>
     <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
@@ -209,7 +224,17 @@ h1{
   <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
-      <p>Texto intacto.</p>
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
+      </p>
       <img src="foto.jpg">
     </div>
   </div>
@@ -219,29 +244,29 @@ h1{
   <div class="section-block">
     <h1>Portfolio</h1>
 
-    <div class="portfolio-container">
+    <div class="portfolio-wrapper">
 
-      <!-- FLECHAS FUERA -->
+      <!-- Flechas externas -->
       <div class="portfolio-nav">
         <button id="prev">‹</button>
         <button id="next">›</button>
       </div>
 
-      <!-- CARRUSEL LIMPIO -->
+      <!-- Carrusel -->
       <div class="portfolio-carousel">
         <div class="portfolio-track">
 
-          <div class="project-card">
+          <a class="project-card">
             <div class="project-image"><img src="brazo1.jpg"></div>
-          </div>
+          </a>
 
-          <div class="project-card">
+          <a class="project-card">
             <div class="project-image"><img src="reloj1.jpg"></div>
-          </div>
+          </a>
 
-          <div class="project-card">
+          <a class="project-card">
             <div class="project-image"><img src="secador2.jpg"></div>
-          </div>
+          </a>
 
         </div>
       </div>
@@ -251,24 +276,24 @@ h1{
 </section>
 
 <script>
-/* scroll vertical */
+/* navegación */
 document.querySelectorAll("nav span").forEach((b,i)=>{
   b.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
 });
 
 /* flechas externas */
-const track = document.querySelector(".portfolio-carousel");
-document.getElementById("prev").onclick =
-  ()=>track.scrollBy({left:-480,behavior:"smooth"});
-document.getElementById("next").onclick =
-  ()=>track.scrollBy({left:480,behavior:"smooth"});
+const carousel=document.querySelector(".portfolio-carousel");
+document.getElementById("prev").onclick=
+  ()=>carousel.scrollBy({left:-480,behavior:"smooth"});
+document.getElementById("next").onclick=
+  ()=>carousel.scrollBy({left:480,behavior:"smooth"});
 
 /* fade in */
 const cards=document.querySelectorAll(".project-card");
 const observer=new IntersectionObserver(e=>{
   e.forEach(x=>x.isIntersecting&&x.target.classList.add("is-visible"));
-},{root:track,threshold:.3});
+},{root:carousel,threshold:.3});
 
 cards.forEach(c=>observer.observe(c));
 </script>
