--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-/* RESET */
+
+/* ========= RESET ========= */
 *{
   margin:0;
   padding:0;
@@ -16,13 +17,15 @@
   font-family:"Inter",sans-serif;
 }
 
+/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
   overflow-y:scroll;
+  scroll-snap-type:y mandatory;
 }
 
-/* NAV */
+/* ========= NAV ========= */
 nav{
   position:fixed;
   top:0;
@@ -36,7 +39,7 @@ nav{
   gap:50px;
   background:rgba(10,10,10,.4);
   backdrop-filter:blur(12px);
-  z-index:200;
+  z-index:100;
 }
 
 nav span{
@@ -47,20 +50,23 @@ nav span{
   cursor:pointer;
 }
 
-/* SECTIONS */
+/* ========= SECTIONS ========= */
 .section{
   min-height:100vh;
+  scroll-snap-align:start;
   display:flex;
+  justify-content:flex-start;
   padding:180px 10vw 160px 22vw;
 }
 
+/* ========= SECTION BLOCK ========= */
 .section-block{
   position:sticky;
   top:260px;
   max-width:1100px;
 }
 
-/* HERO */
+/* ========= HERO (NO TOCAR) ========= */
 .section.hero{
   align-items:center;
 }
@@ -68,18 +74,45 @@ nav span{
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
+  text-align:left;
+  margin-left:-4px;
+}
+
+.hero-surname{
+  white-space:nowrap;
 }
 
 .hero-sub{
   margin-top:24px;
+  padding-left:8px;
+  text-align:left;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
-/* ABOUT */
+/* ========= TYPO ========= */
+h1{
+  font-size:clamp(70px,6vw,120px);
+  font-weight:500;
+  line-height:1.05;
+}
+
+/* ========= TEXT ========= */
+.section-block p{
+  margin-top:8px;
+  padding-left:8px;
+  font-size:15px;
+  color:#aaa;
+  max-width:600px;
+  line-height:1.6;
+  text-align:justify;
+}
+
+/* ========= ABOUT (NO TOCAR) ========= */
 .about{
   display:flex;
+  align-items:flex-start;
   margin-top:12px;
 }
 
@@ -90,62 +123,22 @@ nav span{
 .about img{
   width:300px;
   height:400px;
+  margin-top:16px;
   margin-left:40px;
   object-fit:cover;
-  filter:grayscale(100%);
+  filter:grayscale(100%) contrast(1.05);
   opacity:.9;
 }
 
-/* PORTFOLIO */
+/* ========= PORTFOLIO ========= */
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
+  overflow:hidden;
+  padding-right:120px;
 }
 
-/* Flechas externas */
-.portfolio-nav{
-  position:absolute;
-  top:50%;
-  left:-90px;
-  right:-90px;
-  display:flex;
-  justify-content:space-between;
-  pointer-events:none;
-}
-
-.portfolio-nav button{
-  pointer-events:auto;
-  background:none;
-  border:none;
-  font-size:48px;
-  color:#888;
-  cursor:pointer;
-  transition:color .2s ease;
-}
-
-.portfolio-nav button:hover{
-  color:#fff;
-}
-
-/* Carrusel */
-.portfolio-carousel{
-  overflow-x:auto;
-  scroll-behavior:smooth;
-  scrollbar-width:none;
-}
-
-.portfolio-carousel::-webkit-scrollbar{
-  display:none;
-}
-
-/* Track */
-.portfolio-track{
-  display:flex;
-  gap:48px;
-  padding-bottom:20px;
-}
-
-/* Gradiente derecho */
+/* Gradiente indicador */
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
@@ -154,17 +147,52 @@ nav span{
   width:120px;
   height:100%;
   pointer-events:none;
-  background:linear-gradient(to right, rgba(10,10,10,0), #0a0a0a);
+  background:linear-gradient(
+    to right,
+    rgba(10,10,10,0),
+    rgba(10,10,10,1)
+  );
 }
 
-/* Proyectos */
+.portfolio-carousel{
+  display:flex;
+  gap:48px;
+  overflow-x:auto;
+  padding-bottom:20px;
+  scroll-behavior:smooth;
+  margin-left:-12px; /* ⬅ micro-ajuste a la derecha */
+
+  scrollbar-width:thin;
+  scrollbar-color:#444 transparent;
+}
+
+/* Scrollbar WebKit */
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
+}
+
+.portfolio-carousel::-webkit-scrollbar-track{
+  background:transparent;
+}
+
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background-color:#444;
+  border-radius:6px;
+}
+
+/* Proyecto */
 .project-card{
   min-width:460px;
+  flex-shrink:0;
   text-decoration:none;
   color:inherit;
+  cursor:pointer;
+
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:
+    opacity .8s ease,
+    transform .8s ease;
 }
 
 .project-card.is-visible{
@@ -172,54 +200,99 @@ nav span{
   transform:translateY(0);
 }
 
+.project-card:hover{
+  transform:translateY(-4px);
+}
+
+/* Imagen */
 .project-image{
   width:92%;
   height:260px;
-  margin:0 auto 16px;
+  margin:0 auto 16px auto;
   background:#1a1a1a;
+  overflow:hidden;
 }
 
 .project-image img{
   width:100%;
   height:100%;
   object-fit:cover;
-  filter:grayscale(100%);
+  display:block;
+  filter:grayscale(100%) contrast(1);
   transition:filter .4s ease;
 }
 
-.project-card:hover img{
-  filter:grayscale(0%);
+.project-card:hover .project-image img{
+  filter:grayscale(0%) contrast(1.1);
 }
 
-/* FOOTER */
+/* Texto alineado con imagen */
+.project-card h2,
+.project-card span,
+.project-card p{
+  padding-left:16px;
+}
+
+.project-card h2{
+  font-size:28px;
+  font-weight:400;
+  color:#f0f0f0;
+}
+
+.project-card span{
+  display:block;
+  margin-top:6px;
+  font-size:12px;
+  letter-spacing:.18em;
+  color:#777;
+  text-transform:uppercase;
+}
+
+.project-card p{
+  margin-top:12px;
+  max-width:360px;
+}
+
+/* ========= FOOTER ========= */
 .footer-wrapper{
-  padding:40px 0 20px 22vw;
+  flex:1;
+  display:flex;
+  align-items:flex-end;
+  justify-content:flex-start;
+  padding:0 0 20px 22vw;
+}
+
+.footer{
   font-size:11px;
   letter-spacing:.18em;
   color:#cfcfcf;
 }
+
 </style>
 </head>
-
 <body>
 
 <nav>
   <span data-i="0">Inicio</span>
   <span data-i="1">Sobre mí</span>
   <span data-i="2">Portfolio</span>
+  <span data-i="3">CV</span>
+  <span data-i="4">Contacto</span>
 </nav>
 
+<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>
       Luis<br>
-      Blasco-Ibáñez<br>
+      <span class="hero-surname">Blasco-Ibáñez</span><br>
       Berbel
     </h1>
     <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
 
+<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
@@ -235,67 +308,85 @@ nav span{
         electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
         de todo el proceso de diseño desde la fase del análisis hasta la materialización.
       </p>
-      <img src="foto.jpg">
+      <img src="foto.jpg" alt="Foto personal">
     </div>
   </div>
 </section>
 
+<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
 
     <div class="portfolio-wrapper">
-
-      <!-- Flechas externas -->
-      <div class="portfolio-nav">
-        <button id="prev">‹</button>
-        <button id="next">›</button>
-      </div>
-
-      <!-- Carrusel -->
       <div class="portfolio-carousel">
-        <div class="portfolio-track">
 
-          <a class="project-card">
-            <div class="project-image"><img src="brazo1.jpg"></div>
-          </a>
+        <a href="node.html" class="project-card">
+          <div class="project-image">
+            <img src="brazo1.jpg" alt="Proyecto NODE">
+          </div>
+          <h2>NODE</h2>
+          <span>Proyecto final de grado</span>
+          <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
+        </a>
 
-          <a class="project-card">
-            <div class="project-image"><img src="reloj1.jpg"></div>
-          </a>
+        <a href="sixay.html" class="project-card">
+          <div class="project-image">
+            <img src="reloj1.jpg" alt="Cómoda Sixay">
+          </div>
+          <h2>Sixay · Cómoda</h2>
+          <span>Diseño de mobiliario</span>
+          <p>Desarrollo completo de una cómoda a medida.</p>
+        </a>
 
-          <a class="project-card">
-            <div class="project-image"><img src="secador2.jpg"></div>
-          </a>
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image">
+            <img src="secador2.jpg" alt="Exploración material">
+          </div>
+          <h2>Exploración material</h2>
+          <span>Proyecto experimental</span>
+          <p>Investigación formal y constructiva.</p>
+        </a>
 
-        </div>
+        <a href="conceptual.html" class="project-card">
+          <div class="project-image"></div>
+          <h2>Proyecto conceptual</h2>
+          <span>Diseño de producto</span>
+          <p>Propuesta centrada en el análisis del uso.</p>
+        </a>
+
       </div>
-
     </div>
   </div>
 </section>
 
 <script>
-/* navegación */
-document.querySelectorAll("nav span").forEach((b,i)=>{
-  b.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
+document.querySelectorAll("nav span").forEach((btn,i)=>{
+  btn.addEventListener("click",()=>{
+    document.querySelectorAll(".section")[i]
+      .scrollIntoView({behavior:"smooth"});
+  });
 });
 
-/* flechas externas */
-const carousel=document.querySelector(".portfolio-carousel");
-document.getElementById("prev").onclick=
-  ()=>carousel.scrollBy({left:-480,behavior:"smooth"});
-document.getElementById("next").onclick=
-  ()=>carousel.scrollBy({left:480,behavior:"smooth"});
+const carousel = document.querySelector(".portfolio-carousel");
+carousel.addEventListener("wheel",(e)=>{
+  e.preventDefault();
+  carousel.scrollLeft += e.deltaY;
+},{ passive:false });
 
-/* fade in */
-const cards=document.querySelectorAll(".project-card");
-const observer=new IntersectionObserver(e=>{
-  e.forEach(x=>x.isIntersecting&&x.target.classList.add("is-visible"));
-},{root:carousel,threshold:.3});
+const cards = document.querySelectorAll(".project-card");
+const observer = new IntersectionObserver((entries)=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("is-visible");
+    }
+  });
+},{
+  root: carousel,
+  threshold: 0.3
+});
 
-cards.forEach(c=>observer.observe(c));
+cards.forEach(card=>observer.observe(card));
 </script>
 
 </body>
