--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
-
-/* ========= RESET ========= */
 *{
   margin:0;
   padding:0;
@@ -17,7 +15,6 @@
   font-family:"Inter",sans-serif;
 }
 
-/* ========= BODY ========= */
 body{
   background:#0a0a0a;
   color:#f5f5f5;
@@ -25,7 +22,7 @@ body{
   scroll-snap-type:y mandatory;
 }
 
-/* ========= NAV ========= */
+/* NAV */
 nav{
   position:fixed;
   top:0;
@@ -50,7 +47,7 @@ nav span{
   cursor:pointer;
 }
 
-/* ========= SECTIONS ========= */
+/* SECTIONS */
 .section{
   min-height:100vh;
   scroll-snap-align:start;
@@ -59,14 +56,13 @@ nav span{
   padding:180px 10vw 160px 22vw;
 }
 
-/* ========= SECTION BLOCK ========= */
 .section-block{
   position:sticky;
   top:260px;
   max-width:1100px;
 }
 
-/* ========= HERO (NO TOCAR) ========= */
+/* HERO */
 .section.hero{
   align-items:center;
 }
@@ -74,7 +70,6 @@ nav span{
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
-  text-align:left;
   margin-left:-4px;
 }
 
@@ -85,20 +80,18 @@ nav span{
 .hero-sub{
   margin-top:24px;
   padding-left:8px;
-  text-align:left;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
 }
 
-/* ========= TYPO ========= */
+/* TYPO */
 h1{
   font-size:clamp(70px,6vw,120px);
   font-weight:500;
-  line-height:1.05;
 }
 
-/* ========= TEXT ========= */
+/* TEXT */
 .section-block p{
   margin-top:8px;
   padding-left:8px;
@@ -109,7 +102,7 @@ h1{
   text-align:justify;
 }
 
-/* ========= ABOUT (NO TOCAR) ========= */
+/* ABOUT */
 .about{
   display:flex;
   align-items:flex-start;
@@ -130,7 +123,7 @@ h1{
   opacity:.9;
 }
 
-/* ========= PORTFOLIO ========= */
+/* PORTFOLIO */
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
@@ -138,7 +131,6 @@ h1{
   padding-right:120px;
 }
 
-/* Gradiente indicador */
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
@@ -146,12 +138,8 @@ h1{
   right:0;
   width:120px;
   height:100%;
+  background:linear-gradient(to right, transparent, #0a0a0a);
   pointer-events:none;
-  background:linear-gradient(
-    to right,
-    rgba(10,10,10,0),
-    rgba(10,10,10,1)
-  );
 }
 
 .portfolio-carousel{
@@ -159,41 +147,31 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
-  padding-left:12px;          /* ⬅ barra un poco más corta por la izquierda */
+  padding-left:12px;     /* barra un poco más corta */
+  margin-left:-12px;     /* contenido alineado */
   scroll-behavior:smooth;
-  margin-left:-12px;          /* mantiene alineación del contenido */
 
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
 
-/* Scrollbar WebKit */
 .portfolio-carousel::-webkit-scrollbar{
   height:6px;
 }
 
-.portfolio-carousel::-webkit-scrollbar-track{
-  background:transparent;
-}
-
 .portfolio-carousel::-webkit-scrollbar-thumb{
-  background-color:#444;
+  background:#444;
   border-radius:6px;
 }
 
-/* Proyecto */
+/* PROJECT */
 .project-card{
   min-width:460px;
-  flex-shrink:0;
   text-decoration:none;
   color:inherit;
-  cursor:pointer;
-
   opacity:0;
   transform:translateY(12px);
-  transition:
-    opacity .8s ease,
-    transform .8s ease;
+  transition:opacity .8s ease, transform .8s ease;
 }
 
 .project-card.is-visible{
@@ -201,11 +179,6 @@ h1{
   transform:translateY(0);
 }
 
-.project-card:hover{
-  transform:translateY(-4px);
-}
-
-/* Imagen */
 .project-image{
   width:92%;
   height:260px;
@@ -218,16 +191,14 @@ h1{
   width:100%;
   height:100%;
   object-fit:cover;
-  display:block;
-  filter:grayscale(100%) contrast(1);
-  transition:filter .4s ease;
+  filter:grayscale(100%);
+  transition:.4s;
 }
 
-.project-card:hover .project-image img{
-  filter:grayscale(0%) contrast(1.1);
+.project-card:hover img{
+  filter:grayscale(0%);
 }
 
-/* Texto alineado con imagen */
 .project-card h2,
 .project-card span,
 .project-card p{
@@ -237,16 +208,12 @@ h1{
 .project-card h2{
   font-size:28px;
   font-weight:400;
-  color:#f0f0f0;
 }
 
 .project-card span{
-  display:block;
-  margin-top:6px;
   font-size:12px;
   letter-spacing:.18em;
   color:#777;
-  text-transform:uppercase;
 }
 
 .project-card p{
@@ -254,24 +221,103 @@ h1{
   max-width:360px;
 }
 
-/* ========= FOOTER ========= */
+/* FOOTER */
 .footer-wrapper{
-  flex:1;
-  display:flex;
-  align-items:flex-end;
-  justify-content:flex-start;
   padding:0 0 20px 22vw;
-}
-
-.footer{
   font-size:11px;
   letter-spacing:.18em;
   color:#cfcfcf;
 }
-
 </style>
 </head>
+
 <body>
-<!-- contenido idéntico -->
+
+<nav>
+  <span data-i="0">Inicio</span>
+  <span data-i="1">Sobre mí</span>
+  <span data-i="2">Portfolio</span>
+  <span data-i="3">CV</span>
+  <span data-i="4">Contacto</span>
+</nav>
+
+<!-- HERO -->
+<section class="section hero">
+  <div class="section-block">
+    <h1>
+      Luis<br>
+      <span class="hero-surname">Blasco-Ibáñez</span><br>
+      Berbel
+    </h1>
+    <div class="hero-sub">Portfolio | Diseño industrial</div>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section class="section">
+  <div class="section-block">
+    <h1>Sobre mí</h1>
+    <div class="about">
+      <p>
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
+        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
+        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
+        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
+      </p>
+      <img src="foto.jpg">
+    </div>
+  </div>
+</section>
+
+<!-- PORTFOLIO -->
+<section class="section">
+  <div class="section-block">
+    <h1>Portfolio</h1>
+    <div class="portfolio-wrapper">
+      <div class="portfolio-carousel">
+
+        <a class="project-card">
+          <div class="project-image"><img src="brazo1.jpg"></div>
+          <h2>NODE</h2>
+          <span>Proyecto final de grado</span>
+          <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
+        </a>
+
+        <a class="project-card">
+          <div class="project-image"><img src="reloj1.jpg"></div>
+          <h2>Sixay · Cómoda</h2>
+          <span>Diseño de mobiliario</span>
+          <p>Desarrollo completo de una cómoda a medida.</p>
+        </a>
+
+        <a class="project-card">
+          <div class="project-image"><img src="secador2.jpg"></div>
+          <h2>Exploración material</h2>
+          <span>Proyecto experimental</span>
+          <p>Investigación formal y constructiva.</p>
+        </a>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<script>
+document.querySelectorAll("nav span").forEach((btn,i)=>{
+  btn.onclick=()=>document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
+});
+
+const observer=new IntersectionObserver(e=>{
+  e.forEach(x=>x.isIntersecting&&x.target.classList.add("is-visible"));
+},{threshold:.3});
+
+document.querySelectorAll(".project-card").forEach(c=>observer.observe(c));
+</script>
+
 </body>
 </html>
