--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@ nav span{
   margin-left:-4px;
 }
 
-.hero-surname{
-  white-space:nowrap;
-}
+.hero-surname{ white-space:nowrap; }
 
 .hero-sub{
   margin-top:24px;
@@ -109,9 +107,7 @@ h1{
   margin-top:12px;
 }
 
-.about p{
-  max-width:700px;
-}
+.about p{ max-width:700px; }
 
 .about img{
   width:300px;
@@ -147,8 +143,9 @@ h1{
   gap:48px;
   overflow-x:auto;
   padding-bottom:20px;
-  padding-left:12px;     /* barra un poco más corta */
-  margin-left:-12px;     /* contenido alineado */
+  padding-left:12px;
+  padding-right:12px;   /* ⬅ cierre del carrusel */
+  margin-left:-12px;
   scroll-behavior:smooth;
 
   scrollbar-width:thin;
@@ -195,9 +192,7 @@ h1{
   transition:.4s;
 }
 
-.project-card:hover img{
-  filter:grayscale(0%);
-}
+.project-card:hover img{ filter:grayscale(0%); }
 
 .project-card h2,
 .project-card span,
@@ -220,14 +215,6 @@ h1{
   margin-top:12px;
   max-width:360px;
 }
-
-/* FOOTER */
-.footer-wrapper{
-  padding:0 0 20px 22vw;
-  font-size:11px;
-  letter-spacing:.18em;
-  color:#cfcfcf;
-}
 </style>
 </head>
 
@@ -237,86 +224,63 @@ h1{
   <span data-i="0">Inicio</span>
   <span data-i="1">Sobre mí</span>
   <span data-i="2">Portfolio</span>
-  <span data-i="3">CV</span>
-  <span data-i="4">Contacto</span>
 </nav>
 
-<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
-    <h1>
-      Luis<br>
-      <span class="hero-surname">Blasco-Ibáñez</span><br>
-      Berbel
-    </h1>
+    <h1>Luis<br><span class="hero-surname">Blasco-Ibáñez</span><br>Berbel</h1>
     <div class="hero-sub">Portfolio | Diseño industrial</div>
   </div>
 </section>
 
-<!-- ABOUT -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
-      <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
-        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
-        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
-        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
-      </p>
+      <p>Ingeniero en diseño industrial de 24 años, con base en Valencia...</p>
       <img src="foto.jpg">
     </div>
   </div>
 </section>
 
-<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-
-        <a class="project-card">
+        <div class="project-card">
           <div class="project-image"><img src="brazo1.jpg"></div>
           <h2>NODE</h2>
           <span>Proyecto final de grado</span>
           <p>Sistema modular de mobiliario orientado a la adaptabilidad espacial.</p>
-        </a>
-
-        <a class="project-card">
+        </div>
+        <div class="project-card">
           <div class="project-image"><img src="reloj1.jpg"></div>
           <h2>Sixay · Cómoda</h2>
           <span>Diseño de mobiliario</span>
           <p>Desarrollo completo de una cómoda a medida.</p>
-        </a>
-
-        <a class="project-card">
+        </div>
+        <div class="project-card">
           <div class="project-image"><img src="secador2.jpg"></div>
           <h2>Exploración material</h2>
           <span>Proyecto experimental</span>
           <p>Investigación formal y constructiva.</p>
-        </a>
-
+        </div>
       </div>
     </div>
   </div>
 </section>
 
 <script>
-document.querySelectorAll("nav span").forEach((btn,i)=>{
-  btn.onclick=()=>document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
+document.querySelectorAll("nav span").forEach((b,i)=>{
+  b.onclick=()=>document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
 });
 
-const observer=new IntersectionObserver(e=>{
+const obs=new IntersectionObserver(e=>{
   e.forEach(x=>x.isIntersecting&&x.target.classList.add("is-visible"));
 },{threshold:.3});
 
-document.querySelectorAll(".project-card").forEach(c=>observer.observe(c));
+document.querySelectorAll(".project-card").forEach(c=>obs.observe(c));
 </script>
 
 </body>
