--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ h1{
 .project-inner p{
   margin-top:12px;
   max-width:360px;
+  margin-left:-8px; /* DESPLAZAMIENTO A LA IZQUIERDA */
 }
 
 /* ========= FOOTER ========= */
@@ -273,7 +274,6 @@ h1{
   <span data-i="4">Contacto</span>
 </nav>
 
-<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>
@@ -285,7 +285,6 @@ h1{
   </div>
 </section>
 
-<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
@@ -306,7 +305,6 @@ h1{
   </div>
 </section>
 
-<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
