--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ nav span{
   max-width:1100px;
 }
 
-/* ========= HERO (NO TOCAR) ========= */
+/* ========= HERO ========= */
 .section.hero{
   align-items:center;
 }
@@ -85,7 +85,6 @@ nav span{
 .hero-sub{
   margin-top:24px;
   padding-left:8px;
-  text-align:left;
   font-size:14px;
   letter-spacing:.25em;
   color:#777;
@@ -109,7 +108,7 @@ h1{
   text-align:justify;
 }
 
-/* ========= ABOUT (NO TOCAR) ========= */
+/* ========= ABOUT ========= */
 .about{
   display:flex;
   align-items:flex-start;
@@ -138,7 +137,6 @@ h1{
   padding-right:120px;
 }
 
-/* Gradiente indicador */
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
@@ -174,7 +172,7 @@ h1{
   border-radius:6px;
 }
 
-/* Proyecto */
+/* ========= PROYECTO ========= */
 .project-card{
   min-width:460px;
   flex-shrink:0;
@@ -198,10 +196,10 @@ h1{
   transform:translateY(-4px);
 }
 
-/* CONTENEDOR INTERNO ALINEADO */
+/* CONTENEDOR INTERNO — AJUSTADO */
 .project-inner{
-  width:92%;
-  margin:0 auto;
+  width:100%;
+  margin:0;
 }
 
 /* Imagen */
@@ -244,7 +242,7 @@ h1{
 .project-inner p{
   margin-top:12px;
   max-width:360px;
-  margin-left:-8px; /* DESPLAZAMIENTO A LA IZQUIERDA */
+  margin-left:-8px;
 }
 
 /* ========= FOOTER ========= */
@@ -252,7 +250,6 @@ h1{
   flex:1;
   display:flex;
   align-items:flex-end;
-  justify-content:flex-start;
   padding:0 0 20px 22vw;
 }
 
@@ -290,15 +287,9 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
-        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
-        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
-        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico, flexible y
+        adaptable, situado entre lo técnico y lo conceptual. Disfruto del proceso completo de diseño,
+        desde el análisis hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
