--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ h1{
   transform:translateY(-4px);
 }
 
-/* CONTENEDOR INTERNO — AJUSTADO */
+/* CONTENEDOR INTERNO */
 .project-inner{
   width:100%;
   margin:0;
@@ -242,7 +242,7 @@ h1{
 .project-inner p{
   margin-top:12px;
   max-width:360px;
-  margin-left:-8px;
+  margin-left:-4px; /* AJUSTE FINO */
 }
 
 /* ========= FOOTER ========= */
