--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@ h1{
   overflow-x:auto;
   padding-bottom:20px;
   scroll-behavior:smooth;
+  margin-left:-12px; /* DESPLAZAMIENTO Y ALINEACIÓN */
 
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
@@ -242,7 +243,7 @@ h1{
 .project-inner p{
   margin-top:12px;
   max-width:360px;
-  margin-left:-4px; /* AJUSTE FINO */
+  margin-left:-8px;
 }
 
 /* ========= FOOTER ========= */
