--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ h1{
   overflow-x:auto;
   padding-bottom:20px;
   scroll-behavior:smooth;
-  margin-left:-12px; /* DESPLAZAMIENTO Y ALINEACIÓN */
+  margin-left:-8px; /* ALINEACIÓN EXACTA CON EL TEXTO */
 
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
@@ -243,7 +243,6 @@ h1{
 .project-inner p{
   margin-top:12px;
   max-width:360px;
-  margin-left:-8px;
 }
 
 /* ========= FOOTER ========= */
