--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ h1{
   overflow-x:auto;
   padding-bottom:20px;
   scroll-behavior:smooth;
-  margin-left:-8px; /* ALINEACIÓN EXACTA CON EL TEXTO */
+  margin-left:12px; /* DESPLAZAMIENTO A LA DERECHA */
 
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
