--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@ h1{
   overflow-x:auto;
   padding-bottom:20px;
   scroll-behavior:smooth;
-  margin-left:12px; /* DESPLAZAMIENTO A LA DERECHA */
 
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
@@ -197,7 +196,7 @@ h1{
   transform:translateY(-4px);
 }
 
-/* CONTENEDOR INTERNO */
+/* CONTENEDOR INTERNO — AJUSTADO */
 .project-inner{
   width:100%;
   margin:0;
@@ -243,6 +242,7 @@ h1{
 .project-inner p{
   margin-top:12px;
   max-width:360px;
+  margin-left:-8px;
 }
 
 /* ========= FOOTER ========= */
