--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@ h1{
   padding-bottom:20px;
   scroll-behavior:smooth;
 
+  margin-left:-16px; /* DESPLAZAMIENTO GLOBAL A LA IZQUIERDA */
+
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
@@ -196,7 +198,7 @@ h1{
   transform:translateY(-4px);
 }
 
-/* CONTENEDOR INTERNO — AJUSTADO */
+/* CONTENEDOR INTERNO */
 .project-inner{
   width:100%;
   margin:0;
