--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@ h1{
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
+  margin-left:24px; /* DESPLAZAMIENTO DEL CARRUSEL A LA DERECHA */
   overflow:hidden;
   padding-right:120px;
 }
@@ -158,8 +159,6 @@ h1{
   overflow-x:auto;
   padding-bottom:20px;
   scroll-behavior:smooth;
-
-  margin-left:-16px; /* DESPLAZAMIENTO GLOBAL A LA IZQUIERDA */
 
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
