--- a/index.html
+++ b/index.html
@@ -137,24 +137,24 @@ h1{
   padding-right:120px;
 }
 
-/* FADE IZQUIERDO */
+/* Fade izquierdo (al desplazarse a la derecha) */
 .portfolio-wrapper::before{
   content:"";
   position:absolute;
   top:0;
   left:0;
-  width:120px;
+  width:60px;
   height:100%;
   pointer-events:none;
-  z-index:5;
   background:linear-gradient(
     to left,
     rgba(10,10,10,0),
     rgba(10,10,10,1)
   );
+  z-index:2;
 }
 
-/* FADE DERECHO */
+/* Fade derecho */
 .portfolio-wrapper::after{
   content:"";
   position:absolute;
@@ -163,12 +163,12 @@ h1{
   width:120px;
   height:100%;
   pointer-events:none;
-  z-index:5;
   background:linear-gradient(
     to right,
     rgba(10,10,10,0),
     rgba(10,10,10,1)
   );
+  z-index:2;
 }
 
 .portfolio-carousel{
