--- a/index.html
+++ b/index.html
@@ -359,10 +359,13 @@ carousel.addEventListener("wheel",(e)=>{
 },{ passive:false });
 
 const cards = document.querySelectorAll(".project-card");
+
 const observer = new IntersectionObserver((entries)=>{
   entries.forEach(entry=>{
     if(entry.isIntersecting){
       entry.target.classList.add("is-visible");
+    }else{
+      entry.target.classList.remove("is-visible");
     }
   });
 },{
